--- a/index.html
+++ b/index.html
@@ -1,5 +1,110 @@
-Notes
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JSON Rows to Individual HTML Tables</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px; /* 각 테이블 간의 공백을 설정 */
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        .table-odd {
+            background-color: #f2f2f2;
+        }
+        .table-even {
+            background-color: #ffffff;
+        }
+    </style>
+</head>
+<body>
 
-==========================================================================
-테스트
-==========================================================================
+    <div id="table-container"></div>
+
+    <script>
+        // JSON 데이터
+        const jsonData = [
+            {
+                "문제": "트리의 모든 노드를 한번씩 순회하였을때 최단 거리를 찾는 문제", 
+                "해법": "전체 길의의 합 * 2 - (트리의 지름). \n트리의 지름구하는 방법은" + 
+                "\n1) 임의의 노드를 Root 로 잡고 에서 제일 긴 노드 찾기." + 
+                "\n2) 제일 긴 노드를 Root 를 젭고 해당 노드에서 제일 긴 거리를 찾으면 그것이 곧 트리의 지름이 된다", 
+                "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc361/submissions/55343394",
+                "기타" : "NA"},
+        ];
+
+        // 줄바꿈 문자를 <br> 태그로 변환하는 함수
+        function nl2br(str) {
+            return str.replace(/\n/g, '<br>');
+        }
+
+        // JSON 배열의 각 행을 개별 HTML 테이블로 변환하는 함수
+        function jsonToIndividualTables(jsonArray) {
+            const container = document.createElement('div');
+
+            jsonArray.forEach((item, index) => {
+                const table = document.createElement('table');
+
+                // 테이블 헤더 생성
+                const thead = document.createElement('thead');
+                const headerRow = document.createElement('tr');
+                const headers = Object.keys(item);
+                headers.forEach(header => {
+                    const th = document.createElement('th');
+                    th.textContent = header;
+                    headerRow.appendChild(th);
+                });
+                thead.appendChild(headerRow);
+                table.appendChild(thead);
+
+                // 테이블 바디 생성
+                const tbody = document.createElement('tbody');
+                const row = document.createElement('tr');
+                headers.forEach(header => {
+                    const td = document.createElement('td');
+                    // 줄바꿈 문자를 <br> 태그로 변환하여 innerHTML에 할당
+
+                    if (header === '문제링크' || header === '코드링크') {
+                        const link = document.createElement('a');
+                        link.href = `${item[header]}`;
+                        link.textContent = item[header];
+                        link.target = '_blank';
+                        td.appendChild(link);
+                    } else {
+                        td.innerHTML = nl2br(item[header].toString());
+                    }
+                    row.appendChild(td);
+                });
+                tbody.appendChild(row);
+                table.appendChild(tbody);
+
+                // 짝수 인덱스 테이블에 클래스 추가
+                if (index % 2 === 0) {
+                    table.classList.add('table-even');
+                } else {
+                    table.classList.add('table-odd');
+                }
+
+                container.appendChild(table);
+            });
+
+            return container;
+        }
+
+        // 개별 테이블을 페이지에 추가
+        const tableContainer = document.getElementById('table-container');
+        const tables = jsonToIndividualTables(jsonData);
+        tableContainer.appendChild(tables);
+    </script>
+
+</body>
+</html>
