--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
                 "\n2) 제일 긴 노드를 Root 를 젭고 해당 노드에서 제일 긴 거리를 찾으면 그것이 곧 트리의 지름이 된다", 
                 "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_e", 
                 "코드링크" : "https://atcoder.jp/contests/abc361/submissions/55343394",
-                "기타" : "NA"},
+                "대표이미지" : "NA"
+            },
+            {
+                "문제": "검은돌의 좌표가 주어지고 만약 어떤 빈곳에 흰돌이 놓여있다면 잡힐 수 밖에 없는 영역의 개수를 구하는 문제", 
+                "해법": "1) 세로로 스위핑 하면서 각 줄별로 연속된 빈곳을 영역으로 구분함(L 과 R 의 구조체)" + 
+                "\n2) 각줄별로 현재줄과 다음줄 을 비교하여 위아래로 겹치는 영역끼리 합친다(영역별로 ID 를 부여하여 union-find 로 합침)" + 
+                "\n2) -1,-1 이 있는 지점의 ID 와 같지 않은 영역들의 크기의 합을 계산하면 답이된다.", 
+                "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_g", 
+                "코드링크" : "아직못품",
+                "대표이미지" : "NA"
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
