--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 "\n2) 제일 긴 노드를 Root 를 젭고 해당 노드에서 제일 긴 거리를 찾으면 그것이 곧 트리의 지름이 된다", 
                 "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_e", 
                 "코드링크" : "https://atcoder.jp/contests/abc361/submissions/55343394",
-                "대표이미지" : "NA"
+                "대표이미지" : "abc361_f.png"
             },
             {
                 "문제": "검은돌의 좌표가 주어지고 만약 어떤 빈곳에 흰돌이 놓여있다면 잡힐 수 밖에 없는 영역의 개수를 구하는 문제", 
