--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 "\n2) 로 계산할 수 있다. 각 DP 값이 갱신될 때마다 어디서 이동했는지 기록한다." + 
                 "문제링크" : "https://www.acmicpc.net/problem/2618", 
                 "코드링크" : "https://www.acmicpc.net/source/81325734",
-                "대표이미지" : ""
+                "대표이미지" : "bj_2618.png"
             },
         ];
 
