--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             {
                 "문제": "2차원 공간에 경찰자가 이동하여 사건을 해결하는데 최소한한의 이동거리와 1,2 경찰자중 각각 어떤 경찰차를 선택해야 하는지 결정하는 문제", 
                 "해법": "1) DP[i][j] 는 1 번, 2번 경찰자의 마지막 처리 위치이며, DP[max(i,j)+1][j] = DP[i][j] + 거리(i -> max(i,j)+1)" + 
-                "\n2) 로 계산할 수 있다. 각 DP 값이 갱신될 때마다 어디서 이동했는지 기록한다." + 
+                "\n2) 로 계산할 수 있다. 각 DP 값이 갱신될 때마다 어디서 이동했는지 기록한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/2618", 
                 "코드링크" : "https://www.acmicpc.net/source/81325734",
                 "대표이미지" : "bj_2618.png"
