--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                 "코드링크" : "https://www.acmicpc.net/source/81325734",
                 "대표이미지" : "bj_2618.png"
             },
+            {
+                "문제": "N개의 a 와 M 개의 z 의 조합으로 문자열을 만들때 K 번째 문자열은 무엇인가?", 
+                "해법": "1) DP[i][j] 는 a의 갯수가 i 개이고 b의 개수가 j 일때 가능한 모든 문자열의 개수로 정의한다." + 
+                "\n2) 만약 DP[i-1][j] 보다 K 가 더 크면 i+j 번째 문자열은 z 이다. 이런식의 크기비교로 순서대로 a,z 여부를 판단할 수 있다.",
+                "\n2) 단 DP 테이블 값이 너무 커져서 언더플로우가 나면 비교에 문제가 생기기 때문에 K 의 범위보다 큰 값을 정의해서 해당 값이 넘어가지 않게 한다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1256", 
+                "코드링크" : "https://www.acmicpc.net/source/81381697",
+                "대표이미지" : "bj_1256.png"
+            },
+            
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
