--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             },
             {
                 "문제": "검은돌의 좌표가 주어지고 만약 어떤 빈곳에 흰돌이 놓여있다면 잡힐 수 밖에 없는 영역의 개수를 구하는 문제", 
-                "해법": "1) 세로로 스위핑 하면서 각 줄별로 연속된 빈곳을 영역으로 구분함(L 과 R 의 구조체)" + 
+                "해법": "세로로 스위핑 하면서 각 줄별로 연속된 빈곳을 영역으로 구분함(L 과 R 의 구조체)" + 
                 "\n2) 각줄별로 현재줄과 다음줄 을 비교하여 위아래로 겹치는 영역끼리 합친다(영역별로 ID 를 부여하여 union-find 로 합침)" + 
                 "\n2) -1,-1 이 있는 지점의 ID 와 같지 않은 영역들의 크기의 합을 계산하면 답이된다.", 
                 "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_g", 
@@ -52,7 +52,7 @@
             },
             {
                 "문제": "2차원 공간에 경찰자가 이동하여 사건을 해결하는데 최소한한의 이동거리와 1,2 경찰자중 각각 어떤 경찰차를 선택해야 하는지 결정하는 문제", 
-                "해법": "1) DP[i][j] 는 1 번, 2번 경찰자의 마지막 처리 위치이며, DP[max(i,j)+1][j] = DP[i][j] + 거리(i -> max(i,j)+1)" + 
+                "해법": "DP[i][j] 는 1 번, 2번 경찰자의 마지막 처리 위치이며, DP[max(i,j)+1][j] = DP[i][j] + 거리(i -> max(i,j)+1)" + 
                 "\n2) 로 계산할 수 있다. 각 DP 값이 갱신될 때마다 어디서 이동했는지 기록한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/2618", 
                 "코드링크" : "https://www.acmicpc.net/source/81325734",
@@ -60,12 +60,22 @@
             },
             {
                 "문제": "N개의 a 와 M 개의 z 의 조합으로 문자열을 만들때 K 번째 문자열은 무엇인가?", 
-                "해법": "1) DP[i][j] 는 a의 갯수가 i 개이고 b의 개수가 j 일때 가능한 모든 문자열의 개수로 정의한다." + 
+                "해법": "DP[i][j] 는 a의 갯수가 i 개이고 b의 개수가 j 일때 가능한 모든 문자열의 개수로 정의한다." + 
                 "\n2) 만약 DP[i-1][j] 보다 K 가 더 크면 i+j 번째 문자열은 z 이다. 이런식의 크기비교로 순서대로 a,z 여부를 판단할 수 있다." +
                 "\n2) 단 DP 테이블 값이 너무 커져서 오버플로우가 나면 비교에 문제가 생기기 때문에 K 의 범위보다 큰 값을 정의해서 해당 값이 넘어가지 않게 한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/1256", 
                 "코드링크" : "https://www.acmicpc.net/source/81381697",
                 "대표이미지" : "bj_1256.png"
+            },
+            {
+                "문제": "2차원 공간을 좌,우, 하로 이동이 가능할때 (1,1) -> (R,C) 로 이동하면서 최대한 이득을 낼수 있는 값은 얼마인지 찾는 문제", 
+                "해법": "DP[i][j] 는 1,1 에서 ij 로 왔을때 최대값을 의미함." + 
+                "\n위에서 내려왔을때의 값, 왼쪽에서왔을때의 값, 그리고 오른쪽에서 왔을때의 값중 최대값을 선택하면 된다." +
+                "\n위에서 왔을때의 값은 DP[i-1][j] 이며, 왼쪽에서, 또는 오른쪽에서 스윕하면서 L[j], R[J] 를 계산해 주어야한다" + 
+                "\nDP[i][j] = max(L[j], R[J]) 로 도출할 수 있다. ",
+                "문제링크" : "https://www.acmicpc.net/problem/2169", 
+                "코드링크" : "https://www.acmicpc.net/source/81392028",
+                "대표이미지" : "bj_2169.png"
             },
             
         ];
