--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                 "코드링크" : "https://www.acmicpc.net/source/81392028",
                 "대표이미지" : "bj_2169.png"
             },
+            {
+                "문제": "다음 조건을 만족하는 최대 값을 구해야함." +
+                "\n 1) 부모자식은 동시 선택안됨." +
+                "\n 2) 모든 노드는 선택된 노드와 최소 하나와 연결되어야함.", 
+                "해법": "DP[0][idx] = idx 노드가 선택안되었을때 최대값, DP[1][idx] = idx 가 선택되었을때 최대값" +
+                "\n 최대값을 구하려면 사실 2번조건은 고려하지 않아도 됨. 왜냐하면 인접한 3개의 노드가 동시에 선택안될 경우는 없기 때문.",
+                "문제링크" : "https://www.acmicpc.net/problem/1949", 
+                "코드링크" : "https://www.acmicpc.net/source/81643593",
+                "대표이미지" : "bj_1949.png"
+            },
             
         ];
 
