--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
                 "문제링크" : "https://www.acmicpc.net/problem/1162", 
                 "코드링크" : "https://www.acmicpc.net/source/81680485",
             },
+            {
+                "제목": "다이아몬드 광산",
+                "문제": "맵에서 가장 큰 다이아 몬드를 찾는 문제",
+                "문제이미지" : "bj_1028.png",
+                "해법": "각점애서 좌하, 또는 우하로 이여지는 1의 개수가 몇개인지 DP 로 쌓은 후 부르트 포스로 최대 값을 구핼 수 있다." +
+                "\n단 DP 테이블을 만들때에는 아래에서 위로 스윕해야 한다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1028", 
+                "코드링크" : "https://www.acmicpc.net/source/81751083",
+            },
+
+            {
+                "제목": "이항계수4",
+                "문제": "N, R, P 가 주어졌을때 이항계수binaryCoeff(N,R) 을 P 로 mod 한 값을 찾는 문제",
+                "해법": "뤼카의 정리를 이용하며 쉽게 계산할 수있다." +
+                "\n뤼카의 정리 : N,R 을 P 진수로 표현할때 각자리수 별로 이항계수를 구하여 곱한 것과 통일하다.",
+                "문제링크" : "https://www.acmicpc.net/problem/11402", 
+                "코드링크" : "https://www.acmicpc.net/source/81760595",
+                "대표이미지" : "bj_11402.png",
+                "참고" : "그림의 괄호는 행렬이 아니라 이항계수를 의미함"
+            },
             
         ];
 
@@ -154,7 +174,7 @@
                             link.textContent = 'CLICK';
                         link.target = '_blank';
                         td.appendChild(link);
-                    } else if(header == "대표이미지") {
+                    } else if(header == "대표이미지" || header == "문제이미지") {
                         const img = document.createElement('img');
                         img.src = item[header];
                         td.appendChild(img);
