Add more solving

--- a/index.html
+++ b/index.html
@@ -131,7 +131,44 @@
                 "대표이미지" : "bj_11402.png",
                 "참고" : "그림의 괄호는 행렬이 아니라 이항계수를 의미함"
             },
-            
+            {
+                "분류" : "DP",
+                "제목": "전구",
+                "문제": "나열된 전구들의 색깔을 동일하게 맞출 수 있는 최소 방법 을 구하는 문제",
+                "해법": "DP[S][E] = Min(DP[S][K] + DP[K+1][E]) + A  로 구할 수 있다. A 는 bulb[S] == bulb[K+1] 일 경우 0 그외는 1" +
+                "\n비재귀로 풀려면 S 는 역순으로 순회해야 한다.",
+                "문제링크" : "https://www.acmicpc.net/problem/11402", 
+                "코드링크" : "https://www.acmicpc.net/source/81760595",
+                "대표이미지" : "bj_2449.png",
+            },
+            {
+                "분류" : "lazy segtree",
+                "제목": "구간 합 구하기 2",
+                "문제": "구간 업데이트 및 Query 가 필요하므로 Lazy Segtree 가 적용되어야 한다.",
+                "해법": "Atcoder 의 Lazy Segtree 를 도입하여 업데이트및 Query 를 수행하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/10999", 
+                "코드링크" : "https://www.acmicpc.net/submit/10999/78148216",
+                "대표이미지" : "bj_10999.png",
+            },
+            {
+                "분류" : "Fanwick tree\n(폔윅트리)",
+                "제목": "구간 합 구하기 4",
+                "문제": "원소 업데이트및 구간 합 쿼리를 해야함.",
+                "해법": "펜윅트리를 이용하여 구간쿠리를 수행함. FW Tree 클래스 성질은 아래와 같다." +
+                "\n index 0 은 미사용. 1부터~ N 까지 쿼리함." +
+                "\n 쿼리시  S, E 둘다 포함됨.",
+                "문제링크" : "https://www.acmicpc.net/problem/11659", 
+                "코드링크" : "https://www.acmicpc.net/source/81789965",
+            },
+            {
+                "분류" : "Fanwick tree\n(폔윅트리)",
+                "제목": "중앙값",
+                "문제": "N개의 수열에서 K 개만큼 시작부터 스윕해가면서 중앙값들의 합을 구하는 문제",
+                "해법": "펜윅트리 에 대상 부분 수열을 넣었다 뻬기를 반복하면서 이진 탐색을 통해 중앙 번째의 값을 구할 수 있다." +
+                "\n 입력값 제한이 65535 이므로 Tree 의 배열은 각 숫자들의 개수를 의미한다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1572", 
+                "코드링크" : "https://www.acmicpc.net/source/81797697",
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
