Add knapsack dp problem

--- a/index.html
+++ b/index.html
@@ -169,6 +169,37 @@
                 "문제링크" : "https://www.acmicpc.net/problem/1572", 
                 "코드링크" : "https://www.acmicpc.net/source/81797697",
             },
+            {
+                "분류" : "DP",
+                "제목": "전시장",
+                "문제": "그림을 일렬로 전시하였을때 높이 차이가 S 이상 유지되는 그림만 가격이 매겨질때 최대 가격을 벌 수있는 경우가 얼마인지 찾는문제",
+                "해법": "그림개수와 높이 제약이 너무 큰값이므로 DP 는 무조건 1차원 DP Table 이어야 한다." +
+                "\n DP[i] 는 i 번째 그림이 판매가격에 포함되는 최대 가격으로 정의한다. 1부터 i-1 번째 까지 높이차가 S 이상 차이나는 최대 가격 + 현재 가격으로 도출할 수 있다." +
+                "\n i+1 번째 그림 탐색시작은 i 번째 까지 탐색한 시점부터 탐색하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/2515", 
+                "코드링크" : "https://www.acmicpc.net/source/81840975",
+                "대표이미지" : "bj_2515.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "평범한 배낭",
+                "문제": "표준적인 knapsack DP 문제",
+                "해법": "DP[i][k] = i 번째 물건까지 사용한 용량이 K 일때 최대 만족도" +
+                "\n DP[i][k] = max(DP[i-1][k] , DP[i-1][k-w[i]] + s[i] )" +
+                "\n w[i] : i번째물건의 무게, s[i] : i 번째 물건의 만족도",
+                "문제링크" : "https://www.acmicpc.net/problem/12865", 
+                "코드링크" : "https://www.acmicpc.net/source/81851284",
+            },
+            {
+                "분류" : "DP",
+                "제목": "평범한 배낭",
+                "문제": "knapsack DP 문제인데 각 물건은 N 개 까지 선택할 수 있음.",
+                "해법": "각각의 물건의 크기를 2^n 의 집합으로 쪼갠 후(쪼갠 값들의 합은 물건의 개수와 같아야 한다.) " +
+                "\n knapsack DP 로 풀이할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/12920", 
+                "코드링크" : "https://www.acmicpc.net/source/81849885",
+                "대표이미지" : "bj_12920.png",
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
