--- a/index.html
+++ b/index.html
@@ -200,6 +200,31 @@
                 "코드링크" : "https://www.acmicpc.net/source/81849885",
                 "대표이미지" : "bj_12920.png",
             },
+            {
+                "분류" : "meet in the middle",
+                "제목": "Parcel",
+                "문제": "정수 List 에서 임의의 4개를 선택하여 합할시 Target 값이 존재하는지 판단하는 문제",
+                "해법": "브루트포스로 풀면 N^3 이므로 시간내에 풀 수 없다. " +
+                "\n 주어진 원소들 중에서 모든 원소쌍을 미리 Caching 해 놓은후 똑같이 순회하면서 인덱스 중복이 안되면서 각쌍의 합이 원하는 값인지 비교하면된다." +
+                "\n 어떤 값을 만드는 원소 쌍은 단 하나만 Caching 해도 된다는 것이 핵심.",
+                "문제링크" : "https://www.acmicpc.net/problem/16287", 
+                "코드링크" : "https://www.acmicpc.net/source/81866971"
+            },
+
+            {
+                "분류" : "포함배제의 원리",
+                "제목": "N포커",
+                "문제": "52장중 N 개의 카드를 뽑아서 포커가 나올 수 있는 경우의 수를 구하기",
+                "해법": "52개의 경우중 N 장을 뽑는 모든 경우의 수를 DP 를 통해 미리 계산해 놓는다." +
+                "\n 4장의 카드를 뽑고 나머지 카드 중 num-4 장의 카드를 뽑는 경우의 수를 생각해 볼 수 있다." +
+                "\n 하지만 뽑아야 하는 카드가 8장일경우 포커가 2쌍 선택되는 경우가 중복 될 수 있다." +
+                "\n 따라서 포함 배제의 원리를 이용하여 1개 이상의 포커를 뽑는 경우의 수를 도출해야 한다. " +
+                "\n 예를들어 13의 카드를 뽑을때 1쌍 이상의 포커를 뽑는 경우의 수는 아래와 같다." +
+                "\n ans = COMB[13][1] * COMB[52-4][13-4] - COMB[13][2] * COMB[52-8][13-8] + COMB[13][3] * COMB[52-12][13-12] " +
+                "\n k쌍 이상을 뽑는 경우의 수 = 1한쌍뽑는 경우 - 2쌍뽑는 경우 + 3쌍뽑는 경우 - 4쌍뽑는 경우 .... ",
+                "문제링크" : "https://www.acmicpc.net/problem/16565", 
+                "코드링크" : "https://www.acmicpc.net/source/81943011"
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
