--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 "제목": "KCM Trable",
                 "문제": "Node 1 에서 N 까지 가는데 주어진 한계비용을 초과하지 않는 한도 내에서 가장 빨리 도착하는 방법을 찾기",
                 "해법": "비용 기준으로 2차원 Dijkstra DP 로 구현하는데 시간 초과를 해법하기 위해 몇가지 기술을 적용해야 한다." +
-                "\n DEST[k][cost] 값이 업데이트 되면 DEST[k][const + 1] ~ DEST[k][const + Limit] 까지의 값도 같이 업데이트해주어야 한다." +
-                "\n K 가 최종 도착지라면 loop 를 빠져나온다. 우선순위가 소요시간 기준이기 때문이다." +
-                "\n Edge 를 비용기준으로 정렬해 주어야 한다.",
+                "\n 1) DEST[k][cost] 값이 업데이트 되면 DEST[k][const + 1] ~ DEST[k][const + Limit] 까지의 값도 같이 업데이트해주어야 한다." +
+                "\n 2) K 가 최종 도착지라면 loop 를 빠져나온다. 우선순위가 소요시간 기준이기 때문이다." +
+                "\n 3) Edge 를 비용기준으로 정렬해 주어야 한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/10217", 
                 "코드링크" : "https://www.acmicpc.net/source/81962027"
             },
@@ -256,6 +256,27 @@
                 "문제링크" : "https://www.acmicpc.net/problem/13710", 
                 "코드링크" : "https://www.acmicpc.net/source/82075352",
                 "대표이미지" : "bj_13710.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "방법을 출력하지 않는 숫자 맞추기",
+                "문제": "N 개의 나사가 쌓여있고 왼쪽으로 돌리면 아래의 모든 나사들이 같이돌아가고 오른쪽으로만 돌리면 현재 나사만 돌아간다." +
+                "\n 시작숫자에서 끝숫자 까지 이르는데 나사를 돌리는 최소 횟수를 구해야 함.",
+                "문제이미지" : "bj_13392.png",
+                "해법": "i 번째 나사기준으로 왼쪽으로 몇번 돌았을때 N번째 까지 모두 맞추는데 얼마나 걸리는지 계산하는 table 을정의한다" +
+                "\n DP[i][왼쪽 돌아간 횟수] = min(DP[i+1][i번째를 맞추기 위해 돌려야할 왼쪽회전수] + 회전수를 달성하기 위한 추가 왼쪽 회전수, " +
+                "\n DP[i+1][왼쪽 돌아간횟수] + 회전수를 달성하기 위한 추가 오른쪽 회전수)", 
+                "문제링크" : "https://www.acmicpc.net/problem/13392", 
+                "코드링크" : "https://www.acmicpc.net/source/82233795",
+                "대표이미지" : "bj_13392_2.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "숫자 맞추기",
+                "문제": "앞의문제 BJ-13392 와 동일하지만 어떤 나사를 어느쪽으로 움직였는지 경로를 출력해 주어야함",
+                "해법": "trace table 을 만들어 TRACE[i][j] = pair(next 회전수, 현재나사를 맞추기위한 회전수) 로 정의하여 TRACE[0][0] 부터 추적하면 된다",
+                "문제링크" : "https://www.acmicpc.net/problem/2494", 
+                "코드링크" : "https://www.acmicpc.net/source/82234443",
             },
         ];
 
