--- a/index.html
+++ b/index.html
@@ -278,6 +278,26 @@
                 "문제링크" : "https://www.acmicpc.net/problem/2494", 
                 "코드링크" : "https://www.acmicpc.net/source/82234443",
             },
+            {
+                "분류" : "DP",
+                "제목": "타일 채우기",
+                "문제": "3*N 크기의 벽을 2X1 또는 1X2 타일로 채우는 경우의 수 구하기",
+                "해법": "DP[i][000~111] = i 변째 까지 벽돌을 채우는데 제일 오른쪽 벽돌이 부분적으로 채워졌을 때 채울 수 있는 경우의 수로 정의하여 테이블을 채우면 된다." +
+                "\n 단 최초 가상의 벽을 만들고 DP[0][7] 만 1로 채운다. 왜냐하면 첫번째 줄은 이전 줄을 침범하여 벽돌을 쌓을 수 없기 때문이다",
+                "문제링크" : "https://www.acmicpc.net/problem/2133", 
+                "코드링크" : "https://www.acmicpc.net/source/82260641",
+                "대표이미지" : "bj_2133.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "동전문제",
+                "문제": "특정금액을 채울수 있는 동전의 최소 갯수 구하기",
+                "해법": "금액이 최대 10^17 이므로 전체 금액을 DP table 로 채울 수는 없다. 다만 동전에 규칙이 있기 때문에 규칙을 파악하는 것이 핵심." +
+                "매 백단위 마다 1, 10,25 짜리 동전으로 가정할 수 있기 때문에 0~99 까지 만들수 있는 최소 동전을 만들고 2자리 단위로 끊어서 더하면 됨.",
+                "문제링크" : "https://www.acmicpc.net/problem/1398", 
+                "코드링크" : "https://www.acmicpc.net/source/82505436",
+                "대표이미지" : "bj_1398.png",
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
