--- a/index.html
+++ b/index.html
@@ -293,10 +293,56 @@
                 "제목": "동전문제",
                 "문제": "특정금액을 채울수 있는 동전의 최소 갯수 구하기",
                 "해법": "금액이 최대 10^17 이므로 전체 금액을 DP table 로 채울 수는 없다. 다만 동전에 규칙이 있기 때문에 규칙을 파악하는 것이 핵심." +
-                "매 백단위 마다 1, 10,25 짜리 동전으로 가정할 수 있기 때문에 0~99 까지 만들수 있는 최소 동전을 만들고 2자리 단위로 끊어서 더하면 됨.",
+                "\n 매 백단위 마다 1, 10,25 짜리 동전으로 가정할 수 있기 때문에 0~99 까지 만들수 있는 최소 동전을 만들고 2자리 단위로 끊어서 더하면 됨.",
                 "문제링크" : "https://www.acmicpc.net/problem/1398", 
                 "코드링크" : "https://www.acmicpc.net/source/82505436",
                 "대표이미지" : "bj_1398.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "교차하지 않는 원의 현들의 최대 집합",
+                "문제": "원위의 N 개의 현들중 교차하지 않는 현들의 최대 개수를 구하는 문제",
+                "문제이미지" :  "bj_2673.png",
+                "해법": "원을 직선으로 펼쳐도 동일한 계산 결과가 나온다는 것이 핵심. DP[i][j] = i~j 까지를 가지고 만들수 있는 최대 현의 개수로 정의" +
+                "\n DP[i][j] = max(DP[i][k] + DP[k][j]) , k 는 i~j",
+                "문제링크" : "https://www.acmicpc.net/problem/2673", 
+                "코드링크" : "https://www.acmicpc.net/source/82596905",
+                "대표이미지" : "bj_2673_1.png",
+            },
+            {
+                "분류" : "DP",
+                "제목": "기지국",
+                "문제": "좌표위에 모든 건물을 포함하는 최소 기지국의 길이를 구하는 문제.기지국의 크기는 항상 정사각형이다",
+                "문제이미지" :  "bj_2300.png",
+                "해법": "DP[i] 는 i 번째까지의 최소 길이로 정의 하면" +
+                "\n DP[i] = min(DP[k] + K+1 ~ i 까지 하나로 묵을 수있는 최소 길이) 단 K 는 0~i 의 범위임." +
+                "\n N 의 제약이 최대 10000 일경우 로직이 복잡하지 않으면 N^2 알고리즘이 시간내에 돌 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/2300", 
+                "코드링크" : "https://www.acmicpc.net/source/82604359",
+                "대표이미지" : "bj_2300_1.png",
+            },
+            {
+                "분류" : "Daikstra DP",
+                "제목": "외판원 순회3",
+                "문제": "모든 도시를 한번씩 순회하여 제자리로 돌아오는 최소경로 구하기",
+                "해법": "2차원 daikstra DP 이긴 한데 비교대상이 소수형 값임을 주의해야 한다." +
+                "\n 1) 소수점 값 비교 : 두값의 차이가 1e-9 보다 큰지 작은지 비교" +
+                "\n 2) 소숫점 출력 precision 을 적절하게 설정 cout.precision(10) 정도로 설정" +
+                "\n 3) 너무 크지 않는 DP 초기값설정 DOUBLE_MAX = (double)(1e12)",
+                "문제링크" : "https://www.acmicpc.net/problem/16991", 
+                "코드링크" : "https://www.acmicpc.net/source/82610321",
+            },
+            {
+                "분류" : "누적합",
+                "제목": "Pedometer",
+                "문제": "원형의 길에 놓여있는 휴계소를 시계방향으로만 이동이 가능할때 모든 위치 쌍들의 이동거리중 M 의 배수가 되는 쌍의 개수를 구하는 문제",
+                "문제이미지" :  "abc_367_d_2.png",
+                "해법": "나열된 거리들의 누적합테이블을 만든다.(0 포함)." +
+                "\n 1) 누적합 r 번째 S[R] 에대해 M 으로 나눈 나머지가 같은 S[L] (L 은 0 부터 R-1) 의 개수를 구한다. a-> b 로 이동(a<b) 케이스" +
+                "\n 2) 전체 이동 길이를 L 이라 했을 때 L-S[R] 에 대해 M 으로 나눈 나머지가 같은 S[L] 도 추가로 구하여 더한다. b->a 로 이동케이스",
+                "문제링크" : "https://atcoder.jp/contests/abc367/tasks/abc367_d", 
+                "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56868157",
+                "대표이미지" : "abc_367_d.png"
             },
         ];
 
