--- a/index.html
+++ b/index.html
@@ -344,6 +344,16 @@
                 "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56868157",
                 "대표이미지" : "abc_367_d.png"
             },
+            {
+                "분류" : "DP",
+                "제목": "Permute K times",
+                "문제": "규칙에 따른 배열 재배치 함수가 정의 되어있을때 K 번 했을때 원래 배열이 어떻게 재배치 되는지 찾는 문제",
+                "해법": "K 가 최대 10^18 까지 이므로 단순히 DP 같은것으로 풀 수 없다." +
+                "\n 재배치 함수를 2^T 번 수행하였을때 함수를 DP Table 로 만든 후 K 를 각 비트자리가 1인 부분을 찾아서 변환함수를 합셩하면 된다.", 
+                "문제링크" : "https://atcoder.jp/contests/abc367/tasks/abc367_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56899595",
+                "대표이미지" : "abc_367_e.png"
+            },
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
