--- a/index.html
+++ b/index.html
@@ -354,6 +354,65 @@
                 "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56899595",
                 "대표이미지" : "abc_367_e.png"
             },
+            {
+                "분류" : "누적합 + DP",
+                "제목": "게임판",
+                "문제": "전체 게임판을 정해진 크기의 SubWindow 를 왼쪽 상단에서 오른쪽 하단까지 슬라이딩 하면서 " + 
+                "각 윈도우의 1,2 로마킹된 위치와 중앙 위치의 거리의 합의 차이가 최소가 얼마인지 구하는 문제",
+                "문제이미지" :  "bj_29892_2.png",
+                "해법" : "1 by SubWin sz 의 배열의 합을 계산한다고 생각해보면 DP[i][j][k] 는 i,j 의 배열이 중심점이 K 인 지점과 거리의 함으로 정의한다. " +
+                "\n 계산을 줄이기 위해서 DP[i+1][j][k] 는 DP[i][j][k] 를 참조하여 업데이트 해 주어야 하는데 이때 전체윈도우의 각 열별로 각 그룹별 숫자의 개수를" +
+                "\n 누적합으로 미리계산해야 한다. data[i][j] 의 값만큼 뻬주고, data[i+sz][j] 값만큼 더해주고 중간은 반으로 나누어 위는 개수만큼 더해주고" + 
+                "\n 아래는 개수만큼 뻬주어야 한다.", 
+                "문제링크" : "https://www.acmicpc.net/problem/29892", 
+                "코드링크" : "https://www.acmicpc.net/source/82932354",
+                "대표이미지" : "bj_29892.png"
+            },
+
+            {
+                "분류" : "우선순위큐",
+                "제목": "가운데를말해요",
+                "문제": "숫자배열이주어지면 크기순 정렬하여 중앙값을 출력해야 하는 문제 ", 
+                "해법" : "우선순위 큐를 2개 만들고 왼쪽 큐는 제일 큰수가 Top 으로 , 오른쪽 큐는 제일 작은 수가 Top 으로 오게 설정함." +
+                "\n 새로운 숫자가 들어오면 완쪽 큐의 Top 과 비교하여 더 작거나 같으면 왼쪽에넣고 그렇지 않으면 오른쪽에 넣음" +
+                "\n 항상왼쪽 큐의 크기가 오른쪽 큐의 크기와 같거나 1크게 유지되어야 하므로 사이즈가 큰 큐에서 작은큐로 옮겨주면서 벨런스를 맞춰주면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1655", 
+                "코드링크" : "https://www.acmicpc.net/source/83207504"
+            },
+            {
+                "분류" : "우선순위큐, DP",
+                "제목": "데이터 분석",
+                "문제": "2차원 좌표에 여러 점들이 있고 가로선을 서로 겹치지 않게 그었을때 점과 선사이의 거리가 최소가 되는 값을 구하는 문제", 
+                "문제이미지" :  "bj_29893.png",
+                "해법" : "점들을 X 좌표 기준으로 정렬하여 어떻게 그룹핑하면 최적화가 될지 찾아야 하는문제. 각 그룹은 선분이 그룹의 중앙값에 위치해야함" +
+                "\n 중앙값은 각그룹에서 X 순으로 정렬했을때 중간번째 좌표의 값으로 삼으면 됨." +
+                "\n 정렬후 1~k 까지의 최소값은 다음과 같이 구할 수 있다." +
+                "\n DP[k] = 모든 n 에 대해서 min(DP[i + n] + 중앙값과차이의합(1+n~K))",
+                "문제링크" : "https://www.acmicpc.net/problem/29893", 
+                "코드링크" : "https://www.acmicpc.net/source/83211594"
+            },
+            {
+                "분류" : "유니온 파인드",
+                "제목": "카드게임",
+                "문제": "철수가 임의의 숫자 카드를 낼때 민수가 갖고있는숫자중 철수의 카드보다 더큰 카드 중에서 가장 작은 값의 카드를 선택하는 문제", 
+                "해법" : "한번 카드를 내면 다시 낼 수 없기 때문에 정렬후 카드를 찾아 내고나면 union find 를 이용해 n 과 n+1 을 묵어주면 된다." +
+                "\n 다만 union find 를 수행할때 더큰값이 작은 값의 parent 가되게 설정해야 한다.",
+                "문제링크" : "https://www.acmicpc.net/problem/16566", 
+                "코드링크" : "https://www.acmicpc.net/source/83274029"
+            },
+
+            {
+                "분류" : "다익스트라 DP, Greedy",
+                "제목": "현대모비스 트럭 군집주행",
+                "문제": "도로에서 한지점에서 출발하여 각 지점까지의 거리의 합이 최소가 되는 값을 구해야 한다. 단 선두차량을 뒤따라 갈경우 10% 비용이 절감된다.", 
+                "문제이미지" : "bj_31938.png",
+                "해법" : "다익스트라 DP 를 통해 모든 거리의 합을 구할 수 있다. 이때 모든 차량은 선두로 가지 않는다고 가정한다" +
+                "\n 모든 도작치점으로 도착하는 마지막 길이 선두로 가는 길이라 가정하고 각 도착지점마다 마지막 Edge 를 감안하여 더해주면된다." +
+                "\n 그러나 여기에 함정이 있는게 임의이 지점으로 들어오는 경로의 길이가 같은게 두가지 이상일 수 있다는 것이다. 이때에는 마지막 경로의 길이가" +
+                "\n 가장 짧은것을 선택하면된다. DP 값을 pair 로 설정하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/31938", 
+                "코드링크" : "https://www.acmicpc.net/source/83283303"
+            }
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
