Add new probelms

--- a/index.html
+++ b/index.html
@@ -412,6 +412,73 @@
                 "\n 가장 짧은것을 선택하면된다. DP 값을 pair 로 설정하면 된다.",
                 "문제링크" : "https://www.acmicpc.net/problem/31938", 
                 "코드링크" : "https://www.acmicpc.net/source/83283303"
+            },
+            {
+                "분류" : "DP",
+                "제목": "아이템2",
+                "문제": "N 개의 수열에서 크기가 K 인 집계로 숫자를 반복해서 집을 때 최대 값이 되는 경우를 찾는 문제", 
+                "해법" : "DP[i][1] i-1 번째까 묶였을때의 최대값, DP[i][0] : i-1 번째가 묶이지 않았을때의 최대값",
+                "문제링크" : "https://www.acmicpc.net/problem/31838", 
+                "코드링크" : "https://www.acmicpc.net/source/83979723",
+                "대표이미지" : "bj_31838.png"
+            },
+            {
+                "분류" : "누적합, 투포인터",
+                "제목": "일꾼고용",
+                "문제": "일꾼들의 그룹ID(1 또는 2) 와 능력치가 주여졌을때 두 그룹간 일꾼의 숫자가 같고 능력치의 차이가 K 이하가 되는 연속하는 부분수열의 개수를 구하는 문제", 
+                "해법" : "각 일꾼수열에 대해 누적합을 게산하여 누적합이 같은 것들끼리 는 일꾼의 숫자가 같음을 의미한다. 각 그룹별로 능력치 합의 차이가 K 이하인 개수를 구하면 된다." +
+                "\n 그룹내 특성이 K 이하인 쌍을 구하기 위해서는 투포인터를 이용하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/32125", 
+                "코드링크" : "https://www.acmicpc.net/source/83539417"
+            },
+            {
+                "분류" : "이분 그래프",
+                "제목": "이분 그래프",
+                "문제": "주어진 그래프가 이분 그래프인지 판별하는 문제", 
+                "해법" : "BFS 로 임의의 노드에 출발해서 인접한 노드들끼리 0,1 서로 다른 값을 가질 수 있는 지 체크하면 된다. 예를 들면 1로 마킹된 노드에 다시" +
+                "\n 0 으로 마킹되어야 할일이 생기는 지 검사하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1707", 
+                "코드링크" : "https://www.acmicpc.net/source/83612758"
+            },
+            {
+                "분류" : "이분 그래프",
+                "제목": "줄다리기",
+                "문제": "N 명의 인원들을 2팀으로 나누는데 팀 구성원간 최소 팀워크가 최대인 값이 얼마인지 찾는 문제", 
+                "해법" : "팀워크가 큰 구성원쌍을 내림차순으로 정렬하여 이분그래프를 구성하면서 더이상 이분그래프를 만들수 없는 쌍의 팀워크가 정답임.",
+                "문제링크" : "https://www.acmicpc.net/problem/31444", 
+                "코드링크" : "https://www.acmicpc.net/source/83614273"
+            },
+            {
+                "분류" : "DP",
+                "제목": "RPG",
+                "문제": "N 개의 퀘스트가 있고 그 퀘스트를 클리어하면 보상이 주어지는데 최대한 깰수있는 퀘스트의 개수를 구하는 문제", 
+                "해법" : "지능과 힘에 도달하였을때 총 깰수있는 퀘스트 갯수를 구하고 각 지능과 힘에 도달할 수 있는 지 검사하면 된다." +
+                "\n 각 지능과 힘의 상태에 도달햇을때 잔여 스텟을 계산하여 이전가능한 상태에서 현재상태로 올수 있는지 계산하면 된다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1315", 
+                "코드링크" : "https://www.acmicpc.net/source/83781904"
+            },
+            {
+                "분류" : "위상정렬",
+                "제목": "부분달리기 시합",
+                "문제": "N 명이 달리기 시합을 하고 M 개의 쌍의 달리기 실력쌍이 주어질때 모든 사람의 순위를 결정할 수 있는 가능한 모든 부분배열을 구하는 문제", 
+                "해법" : "더 빠른 사람을 부모노드, 느린사람을 자식노드로 생각하여 모든 사람의 자식노드들을 리스트 할 수 있다. 그리고 위상정렬로 노드순서를 재배치" +
+                "\n 할 수 있고 정렬된 순서로 DP[i] = DP[All child] + 1 로 계산할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/31445", 
+                "코드링크" : "https://www.acmicpc.net/source/83946517",
+                "대표이미지" : "bj_31445.png"
+            },
+            {
+                "분류" : "DP",
+                "제목": "선분의 합집합",
+                "문제": "각 선분 별로 길이와 가격이 있고 주어진 가격으로 선분을 딱 맞게 구매하여 원하는 길이를 만들 수 있는지 계산해야 하는 문제", 
+                "해법" : "선택된 선분의 집합에서 최소 길이는 가장 긴선분의 길이, 최대길이는 모든 선분 길이의 합으로 정의할 수 있다." +
+                "\n 선분들을 길이 순으로 정렬하여 DP[i][k] = i 번째 까지 K 의 가격으로 만들 수 있는 최대 길이로 정의 할 수 있다." +
+                "\n 각 쿼리별로 DP 들을 순회하면서 i번째 선분의 길이 ~ DP[i][k] 에 속하는게 있으면 YES , 그렇지 않으면 NO 를 출력하면 된다." +
+                "\n DP[i][k] 에서 i 번째 선분이 가격에 포함되지 않는 경우는 고려하지 않아도 된다. 만약 i 번째 선분의 길이가 10이고, " +
+                "\n 가격 k 를 만드는 최대 선분길이가 8 인경우 DP[i][k] 를 스캔하여 9,K 는 NO 로 답할거라고 생각할 수도 있지만" +
+                "\n 해당 쿼리는 DP[j][k] (j < i)를 스캔하여 YES 를 도출 할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/31445", 
+                "코드링크" : "https://www.acmicpc.net/source/83946517"
             }
         ];
 
