add more problem

--- a/index.html
+++ b/index.html
@@ -521,6 +521,29 @@
                 "\n Weight 가 모순되는 경우는 없기 때문이다.",
                 "문제링크" : "https://atcoder.jp/contests/abc373/tasks/abc373_d", 
                 "코드링크" : "https://atcoder.jp/contests/abc373/submissions/58320807"
+            },
+            {
+                "분류" : "오일러 경로 테크닉",
+                "제목": "회사 문화 2",
+                "문제": "트리구조의 회사 조직에서 상사가 칭찬을 받으면 부하까지 같이 칭잔을받을때 특정 시점에서 직원의 총 칭찬점수가 몆점인 지 구하는 문제.", 
+                "해법" : "오일러 경로 테크닉과 구간합을 이용하면 본 문제를 쉽게 해결할 수 있다. 트리를 DFS 로 순회하면서 노드에 진입하는 번호와 나오는 번호를 마킹한다." +
+                "\n 칭칸쿼리를 받으면 해당 사원의 진입번호에 값을 증가 나오는 번호에 값을 감소 시킨다." +
+                "\n k 번재 사윈의 칭찬값은 1~ K 번째 사원의 진입번호 까지의 총합이고 이는 Fanwick Tree 로 구현할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/14268", 
+                "코드링크" : "https://www.acmicpc.net/source/84687277",
+                "대표이미지" : "bj_14268.png"
+            },
+            {
+                "분류" : "DP",
+                "제목": "Range Flip Find Route",
+                "문제": "2차원 배열에서 White 영역과 Bloack 영역이 있고 White 영역으로만 이동이 가능하다. (x1,y1) ~ (x2,y2) 까지 사각형 단위로 색상을 반전 시킬 수 있다." +
+                "\n (1,1) -> (H,W) 까지 이동하기 위해 최소한의 반전횟수를 구하는 문제", 
+                "해법" : "1,1 에서 H,W 까지 경로에 연속된 검은 칸은 한번에 반전 시킬 수 있다. 따라서 (1,1) -> (H,W) 까지 최소 색 반전의 개수를 DP Table 로 구성하면 된다." +
+                "\n 단 시작칸과 도착칸이 검은색일 경우 반전해야 하므로 DP 값을 추가로 1 증가시켜야 한다." +
+                "\n 최종답은 DP[H-1][W-1] / 2 가 된다. 색이 2번 반전되는 것은 검은색 그룹이 1개라는 뜻이기 때문.",
+                "문제링크" : "https://atcoder.jp/contests/agc043/tasks/agc043_a", 
+                "코드링크" : "https://atcoder.jp/contests/agc043/submissions/58516066",
+                "대표이미지" : "agc043_a.png"
             }
         ];
 
