add more problem

--- a/index.html
+++ b/index.html
@@ -534,6 +534,15 @@
                 "대표이미지" : "bj_14268.png"
             },
             {
+                "분류" : "오일러 경로 테크닉",
+                "제목": "Count Descendants",
+                "문제": "주어진 Tree 에서 특정 노드의 자식들 중 Level 이 K 인 노드들의 개수를 찾는 문제", 
+                "해법" : "오일러 경로 테크닉으로 각 노드들의 tin, tout 을 저장한다. 모든 노드들의 tin 값을 level 단위로 list 한다." +
+                "\n 주어진 노드들의 tin ~ tout 사이의 값에 의해 해당되는 레벨리스트에서 lower bound 를 이용하여 개수를 구할 수 있다.",
+                "문제링크" : "https://atcoder.jp/contests/abc202/tasks/abc202_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc202/submissions/58591728",
+            },
+            {
                 "분류" : "DP",
                 "제목": "Range Flip Find Route",
                 "문제": "2차원 배열에서 White 영역과 Bloack 영역이 있고 White 영역으로만 이동이 가능하다. (x1,y1) ~ (x2,y2) 까지 사각형 단위로 색상을 반전 시킬 수 있다." +
